adds commands and docker for web

--- a/src/web/resources/public/index.html
+++ b/src/web/resources/public/index.html
@@ -13,8 +13,13 @@
   </head>
   <body>
     <div id="app">
-      <h3 class="header-text" id="position">ickl.ink</h3>
       <form id="form" autocomplete="off">
+        <div id="output" class="output">
+          <p class="typed"> Hello! &#128075; Welcome to <strong>ickl.ink</strong>. </p>
+            
+          <p>Try typing something, like <strong>shorten</strong> followed by a url. </p>
+
+        </div>
         <div id="prompt" class="prompt">
           <div id="label">
             >
