--- a/src/web/resources/public/index.html
+++ b/src/web/resources/public/index.html
@@ -24,7 +24,7 @@
           <div id="label">
             >
           </div>
-          <input type="text" class="rq-form-element" value="" id="input" autofocus/>
+          <input type="text" class="rq-form-element" value="" id="input" autofocus autocomplete="off" autocapitalize="off"/>
           <i id="caret" style="left: 3px;"></i>
         </div>
       </form>
