--- a/src/web/resources/public/index.html
+++ b/src/web/resources/public/index.html
@@ -15,16 +15,12 @@
     <div id="app">
       <form id="form" autocomplete="off">
         <div id="output" class="output">
-          <p class="typed"> Hello! &#128075; Welcome to <strong>ickl.ink</strong>. </p>
-            
-          <p>Try typing something, like <strong>shorten</strong> followed by a url. </p>
-
         </div>
         <div id="prompt" class="prompt">
           <div id="label">
             >
           </div>
-          <input type="text" class="rq-form-element" value="" id="input" autofocus autocomplete="off" autocapitalize="off"/>
+          <input type="text" class="rq-form-element" value="" placeholder="shorten https://www.nicholastolhurst.com/" id="input" autofocus autocorrect="off" autocapitalize="none" autocomplete="off"/>
           <i id="caret" style="left: 3px;"></i>
         </div>
       </form>
