--- a/src/web/resources/public/index.html
+++ b/src/web/resources/public/index.html
@@ -13,14 +13,14 @@
   </head>
   <body>
     <div id="app">
-      <form id="form" autocomplete="off">
+      <form id="form" autocomplete="off" autocorrect="off" autocapitalize="none">
         <div id="output" class="output">
         </div>
         <div id="prompt" class="prompt">
           <div id="label">
             >
           </div>
-          <input type="text" class="rq-form-element" value="" placeholder="shorten https://www.nicholastolhurst.com/" id="input" autofocus autocorrect="off" autocapitalize="none" autocomplete="off"/>
+          <input type="text" class="rq-form-element" value="" placeholder="shorten https://www.nicholastolhurst.com/" id="input" autofocus/>
           <i id="caret" style="left: 3px;"></i>
         </div>
       </form>
