final commit for day

--- a/src/web/resources/public/index.html
+++ b/src/web/resources/public/index.html
@@ -20,8 +20,8 @@
           <div id="label">
             >
           </div>
-          <input type="text" class="rq-form-element" value="" placeholder="shorten https://www.nicholastolhurst.com/" id="input" autofocus/>
-          <i id="caret" style="left: 3px;"></i>
+          <input type="text" class="rq-form-element" value="" placeholder="start typing.." id="input" autofocus/>
+          <i id="caret" style="left: 4px;"></i>
         </div>
       </form>
     </div>
