changes input to email

--- a/src/web/resources/public/index.html
+++ b/src/web/resources/public/index.html
@@ -20,7 +20,7 @@
           <div id="label">
             >
           </div>
-          <input type="text" class="rq-form-element" value="" placeholder="start typing.." id="input" autofocus/>
+          <input type="email" title="yes, commander?" class="rq-form-element" value="" placeholder="start typing.." id="input" autofocus/>
           <i id="caret" style="left: 4px;"></i>
         </div>
       </form>
