--- a/src/web/resources/public/index.html
+++ b/src/web/resources/public/index.html
@@ -12,7 +12,9 @@
     <link href='https://fonts.googleapis.com/css?family=Fira Code' rel='stylesheet'>
   </head>
   <body>
+
     <div id="app">
+    <h2>ickl.ink</h2>
       <form id="form" autocomplete="off" autocorrect="off" autocapitalize="none">
         <div id="output" class="output">
         </div>
@@ -20,7 +22,7 @@
           <div id="label">
             >
           </div>
-          <input type="email" title="yes, commander?" class="rq-form-element" value="" placeholder="start typing.." id="input" autofocus/>
+          <input type="search" title="yes, commander?" class="rq-form-element" value="" placeholder="start typing.." id="input" autofocus/>
           <i id="caret" style="left: 4px;"></i>
         </div>
       </form>
